--- a/index.css
+++ b/index.css
@@ -237,3 +237,11 @@ h3{
     height: 140px;
   }
 }
+.icon-links i{
+  font-size: 2.5rem;
+  transition: transform 0.2s ease;
+}
+
+.icon-links a:hover i{
+  transform: scale(1.15);
+}
